--- a/pocketpassword/src/main/resources/application.properties
+++ b/pocketpassword/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-db.driver-class-name=org.h2.Driver
-db.username=sa
-db.password=
-db.url=jdbc:h2:tcp://localhost/c:/temp/db/test1
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.url=jdbc:h2:tcp://localhost/c:/temp/db/test2
