--- a/pocketpassword/src/main/resources/application.properties
+++ b/pocketpassword/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.url=jdbc:h2:tcp://localhost/c:/temp/db/test2
+
+app.dbfolder=c:/temp/db
