--- a/pocketpassword/pom.xml
+++ b/pocketpassword/pom.xml
@@ -22,7 +22,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<start-class>com.ibh.pocketpassword.PocketpasswordApplication</start-class>
+ 		<start-class>com.ibh.pocketpassword.PocketpasswordApplication</start-class>
 	</properties>
 
 	<dependencies>
@@ -61,11 +61,144 @@
 			<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
-			</dependency>
+		</dependency>
+		
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      </dependency>
+			
 	</dependencies>
 
 	<build>
 		<plugins>
+
+<!--  try -->		
+ 		<!-- download source code in Eclipse, best practice -->
+<!--       <plugin> -->
+<!--         <groupId>org.apache.maven.plugins</groupId> -->
+<!--         <artifactId>maven-eclipse-plugin</artifactId> -->
+<!--         <configuration> -->
+<!--           <downloadSources>true</downloadSources> -->
+<!--           <downloadJavadocs>false</downloadJavadocs> -->
+<!--         </configuration> -->
+<!--       </plugin> -->
+
+<!--       Set a compiler level -->
+<!--       <plugin> -->
+<!--         <groupId>org.apache.maven.plugins</groupId> -->
+<!--         <artifactId>maven-compiler-plugin</artifactId> -->
+<!--         <configuration> -->
+<!--           <source>${java.version}</source> -->
+<!--           <target>${java.version}</target> -->
+<!--         </configuration> -->
+<!--       </plugin> -->
+
+<!--       Make this jar executable -->
+<!--       <plugin> -->
+<!--         <groupId>org.apache.maven.plugins</groupId> -->
+<!--         <artifactId>maven-jar-plugin</artifactId> -->
+<!--         <configuration> -->
+<!--           <excludes> -->
+<!--           <exclude>**/log4j.properties</exclude> -->
+<!--           </excludes> -->
+<!--           <archive> -->
+<!--             <manifest> -->
+<!--           <addClasspath>true</addClasspath> -->
+<!--           <mainClass>org.springframework.boot.loader.JarLauncher</mainClass> -->
+<!--           <classpathPrefix>dependency-jars/</classpathPrefix> -->
+<!--             </manifest> -->
+<!--           </archive> -->
+<!--         </configuration> -->
+<!--       </plugin> -->
+
+ <!-- Copy project dependency --> 
+<!--       <plugin> -->
+<!--         <groupId>org.apache.maven.plugins</groupId> -->
+<!--         <artifactId>maven-dependency-plugin</artifactId> -->
+<!--         <executions> -->
+<!--           <execution> -->
+<!--           <id>copy-dependencies</id> -->
+<!--           <phase>package</phase> -->
+<!--           <goals> -->
+<!--             <goal>copy-dependencies</goal> -->
+<!--           </goals> -->
+<!--           <configuration> -->
+<!--             exclude junit, we need runtime dependency only -->
+<!--             <includeScope>runtime</includeScope> -->
+<!--             <outputDirectory>${project.build.directory}/dependency-jars/</outputDirectory> -->
+<!--           </configuration> -->
+<!--           </execution> -->
+<!--         </executions> -->
+<!--       </plugin> -->
+
+<!--  try  -->
+                        
+<!-- 		<plugin> -->
+<!--                 <groupId>org.springframework.boot</groupId> -->
+<!--                 <artifactId>spring-boot-maven-plugin</artifactId> -->
+<!--                 <configuration> -->
+<!--                     <fork>true</fork> -->
+<!--                     <mainClass>${start-class}</mainClass> -->
+<!--                 </configuration> -->
+<!--                   <executions> -->
+<!--                     <execution> -->
+<!--                       <goals> -->
+<!--                         <goal>repackage</goal> -->
+<!--                       </goals> -->
+<!--                     </execution> -->
+<!--                 </executions> -->
+<!--             </plugin> -->
+<!--             <plugin> -->
+<!--               <artifactId>maven-assembly-plugin</artifactId> -->
+<!--               <configuration> -->
+<!--                 <archive> -->
+<!--                   <manifest> -->
+<!--                     <addClasspath>true</addClasspath> -->
+<!--                     <mainClass>com.ibh.pocketpassword.PocketpasswordApplication</mainClass> -->
+<!--                   </manifest> -->
+<!--                 </archive> -->
+<!--                 <descriptorRefs> -->
+<!--                   <descriptorRef>jar-with-dependencies</descriptorRef> -->
+<!--                 </descriptorRefs> -->
+<!--               </configuration> -->
+<!--               <executions> -->
+<!--                 <execution> -->
+<!--                   <id>assemble-all</id> -->
+<!--                   <phase>package</phase> -->
+<!--                   <goals> -->
+<!--                     <goal>single</goal> -->
+<!--                   </goals> -->
+<!--                 </execution> -->
+<!--               </executions> -->
+<!--             </plugin> -->
+		
+		
+<!-- 		<plugin> -->
+<!--     <groupId>org.apache.maven.plugins</groupId> -->
+<!--     <artifactId>maven-assembly-plugin</artifactId> -->
+<!--     <executions> -->
+<!--         <execution> -->
+<!--             <phase>package</phase> -->
+<!--             <goals> -->
+<!--                 <goal>single</goal> -->
+<!--             </goals> -->
+<!--             <configuration> -->
+<!--                 <archive> -->
+<!--                 <manifest> -->
+<!--                     <mainClass> -->
+<!--                         com.ibh.pocketpassword.PocketpasswordApplication -->
+<!--                     </mainClass> -->
+<!--                 </manifest> -->
+<!--                 </archive> -->
+<!--                 <descriptorRefs> -->
+<!--                     <descriptorRef>jar-with-dependencies</descriptorRef> -->
+<!--                 </descriptorRefs> -->
+<!--             </configuration> -->
+<!--         </execution> -->
+<!--     </executions> -->
+<!-- </plugin> -->
+		
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
