--- a/pocketpassword/pom.xml
+++ b/pocketpassword/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.ibh</groupId>
 	<artifactId>pocketpassword</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>pocketpassword</name>
